--- a/index.html
+++ b/index.html
@@ -4,10 +4,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <main>
-        <section></section>
+        <section>
+            <div class="container">
+                <div class="top">
+         <h1>OUR STORY</h1>
+         <div class="stroke"></div>
+        </div>
+
+         <div class="box">
+
+         <div class="left">
+         <h2>Founded in 2011 by John Mathew Smith, <span> Konstruct </span> has become the number one construction management firm</h2>
+       <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat.</p>
+        </div>
+
+        <div class="right">
+            <img src="imeg/plan.png" alt="WE PLAN">
+            <img src="imeg/manage.png" alt=" WE MANAGE">
+            <img src="imeg/deliver.png" alt="WE BULD">
+        </div>
+
+
+        </div>
+        </div>
+        </section>
         <section></section>
     </main>
 </body>
