--- a/index.html
+++ b/index.html
@@ -3,36 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles.css">
+    <title>Practice</title>
 </head>
 <body>
-    <main>
-        <section>
-            <div class="container">
-                <div class="top">
-         <h1>OUR STORY</h1>
-         <div class="stroke"></div>
-        </div>
+    <section class="Services">
+        <header class="Service-head">
+        <h1 class="Service-title">OUR CAPABILITIES</h1>
+        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam <br>nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat.</p>
+        <button class="Service-btn">all services</button>
+        </header>
 
-         <div class="box">
-
-         <div class="left">
-         <h2>Founded in 2011 by John Mathew Smith, <span> Konstruct </span> has become the number one construction management firm</h2>
-       <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat.</p>
-        </div>
-
-        <div class="right">
-            <img src="imeg/plan.png" alt="WE PLAN">
-            <img src="imeg/manage.png" alt=" WE MANAGE">
-            <img src="imeg/deliver.png" alt="WE BULD">
-        </div>
-
-
-        </div>
-        </div>
+        <section class="Service-cards">
+         <div>
+            <img src="/Service.icons/Document.svg" alt="Document-icon">
+            <h1>PROJECT AND CONSTRUCTION MANAGEMENT</h1>
+            <p>Lorem ipsum dolor sit amet, <br>consectetuer adipiscing elit, sed diam <br> nonummy nibh euismod tincidunt ut <br> laoreet dolore magna aliquam erat.</p>
+         </div>
+         <div>
+            <img src="/Service.icons/magazine.svg" alt="magazine-icon">
+            <h1>STRUCTURE AUDIT AND MAINTENANCE</h1>
+            <p>Lorem ipsum dolor sit amet, <br>consectetuer adipiscing elit, sed diam <br> nonummy nibh euismod tincidunt ut <br> laoreet dolore magna aliquam erat.</p>
+         </div>
+         <div>
+            <img src="/Service.icons/bank.svg" alt="bank-icon">
+            <h1>FACTORY CONSTRUCTION AND MODELING</h1>
+            <p>Lorem ipsum dolor sit amet, <br>consectetuer adipiscing elit, sed diam <br> nonummy nibh euismod tincidunt ut <br> laoreet dolore magna aliquam erat.</p>
+         </div>
         </section>
-        <section></section>
-    </main>
+
+    </section>
 </body>
 </html>
